@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "1.0.8"
+  VERSION = "1.0.9"
 end
